Cycles combined CPU + GPU render crash #58183

Closed
opened 2018-11-29 21:41:24 +01:00 by Riley Brown · 25 comments

System Information
Operating system: Windows 10
Graphics card: 2x GTX 1080ti

Blender Version
Broken: 2.80 Beta, 26d5a3625e, 2018-11-29
Worked in: Every other 2.8 version in the last few months.

My cycles compute device is set to CUDA. I have the following selected for render:
GeForce GTX 1080 Ti
GeForce GTX 1080 Ti
Intel Core i0-7980XE CPU
Render device is set to GPU Compute.

Every time I hit render, the program crashes. This is true for both older 2.8 files, as well as brand new files created within the Beta. I cannot render single frames, or animations. The view port render preview still works. Rendering using CPU as the render device works, but crashes as soon as the render is complete. I have tested with 3 different blend files, and even tried rendering the default cube in a new blend file. It crashes ever time.

Exact steps for others to reproduce the error

Start new file
Set the render device to GPU compute
In the preferences, under general, select CUDA as the cycles compute device.
Select both Geforce GTX 1080 Ti cards,
Select the intel core CPU.
Save preferences
Press F12 to Render
System crashes immediately.

**System Information** Operating system: Windows 10 Graphics card: 2x GTX 1080ti **Blender Version** Broken: 2.80 Beta, 26d5a3625ed, 2018-11-29 Worked in: Every other 2.8 version in the last few months. My cycles compute device is set to CUDA. I have the following selected for render: GeForce GTX 1080 Ti GeForce GTX 1080 Ti Intel Core i0-7980XE CPU Render device is set to GPU Compute. Every time I hit render, the program crashes. This is true for both older 2.8 files, as well as brand new files created within the Beta. I cannot render single frames, or animations. The view port render preview still works. Rendering using CPU as the render device works, but crashes as soon as the render is complete. I have tested with 3 different blend files, and even tried rendering the default cube in a new blend file. It crashes ever time. **Exact steps for others to reproduce the error** Start new file Set the render device to GPU compute In the preferences, under general, select CUDA as the cycles compute device. Select both Geforce GTX 1080 Ti cards, Select the intel core CPU. Save preferences Press F12 to Render System crashes immediately.
Author

Added subscriber: @rileybrown704

Added subscriber: @rileybrown704

#58316 was marked as duplicate of this issue

#58316 was marked as duplicate of this issue

#58245 was marked as duplicate of this issue

#58245 was marked as duplicate of this issue

#58254 was marked as duplicate of this issue

#58254 was marked as duplicate of this issue

#58253 was marked as duplicate of this issue

#58253 was marked as duplicate of this issue

#58246 was marked as duplicate of this issue

#58246 was marked as duplicate of this issue

#58205 was marked as duplicate of this issue

#58205 was marked as duplicate of this issue

#58215 was marked as duplicate of this issue

#58215 was marked as duplicate of this issue

Added subscriber: @SteffenD

Added subscriber: @SteffenD

OK, I think I'm onto something! :)

I also noticed that all of a sudden my own compiles both of Master and 2.80 started crashing (didn't render anything the last few days so I just noticed it some hours ago after the Beta release).
They only crashed if I used hybrid GPU and CPU rendering. GPU on its own rendered without problems, so did CPU only. My system is a Threadripper x2950 with a 1080ti running Linux Mint 19 BTW.

At first I thought it was my system or compiles but after downloading today's Beta it also crashed in the very same way. So I began investigating and during the last few hours I compiled several older versions of both Master and 2.80 until I found the point where both of them started to break. It's this last-minute-before-beta commit by Stefan Werner: https://developer.blender.org/rB7fa6f72084b1364cddfbef4f06bbb244210d6967 (Cycles: Add sample-based runtime profiler that measures time spent in various parts of the CPU kernel). All builds after that fail, all before run smoothly.

I hope that it can be fixed ASAP and a new Beta can be uploaded before the whole Blender 2.80 world bursts in flames... (just kidding, I just think it could stir up some dirt, there are several GPU related crash reports like this one already coming in).

OK, I think I'm onto something! :) I also noticed that all of a sudden my own compiles both of Master and 2.80 started crashing (didn't render anything the last few days so I just noticed it some hours ago after the Beta release). They only crashed if I used hybrid GPU and CPU rendering. GPU on its own rendered without problems, so did CPU only. My system is a Threadripper x2950 with a 1080ti running Linux Mint 19 BTW. At first I thought it was my system or compiles but after downloading today's Beta it also crashed in the very same way. So I began investigating and during the last few hours I compiled several older versions of both Master and 2.80 until I found the point where both of them started to break. It's this last-minute-before-beta commit by Stefan Werner: https://developer.blender.org/rB7fa6f72084b1364cddfbef4f06bbb244210d6967 (Cycles: Add sample-based runtime profiler that measures time spent in various parts of the CPU kernel). All builds after that fail, all before run smoothly. I hope that it can be fixed ASAP and a new Beta can be uploaded before the whole Blender 2.80 world bursts in flames... (just kidding, I just think it could stir up some dirt, there are several GPU related crash reports like this one already coming in).
Brecht Van Lommel changed title from Blender Crashes when initiating cycles GPU render (tested on multiple 2.8 files.) to Cycles combined CPU + GPU render crash 2018-11-29 22:57:37 +01:00
Author

This comment was removed by @rileybrown704

*This comment was removed by @rileybrown704*

Sorry, can't confirm your other crash problem

Sorry, can't confirm your other crash problem

This issue was referenced by blender/cycles@b36aa09741

This issue was referenced by blender/cycles@b36aa0974137ea2956275cfc0187b406629c6af8

This issue was referenced by a8b8da5567

This issue was referenced by a8b8da55672c2177c55709321df3514355b513f4
Added subscribers: @ostapblender, @ChristopherAnderssarian

Added subscriber: @DimitriBastos

Added subscriber: @DimitriBastos

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JessicaLuchesi

Added subscriber: @JessicaLuchesi

Added subscribers: @gorillamenace, @brecht

Added subscribers: @gorillamenace, @brecht

Added subscriber: @DouglasLiell

Added subscriber: @DouglasLiell

Added subscriber: @nezumi

Added subscriber: @nezumi

Now it's better and I can render once crashing scene, but if I increase texture size it will show buckets on renderframe and then crash Assblaster_BaseSceneBend4BM28-2.rar

Maybe it's related to memory limitations? But isn't Cycles supposed to load resources in RAM if there's not enough VRAM left?

DxDiag.rar

63150511a2 also crashing this time, but render gets a bit farther.

Now it's better and I can render once crashing scene, but if I increase texture size it will show buckets on renderframe and then crash [Assblaster_BaseSceneBend4BM28-2.rar](https://archive.blender.org/developer/F5768345/Assblaster_BaseSceneBend4BM28-2.rar) Maybe it's related to memory limitations? But isn't Cycles supposed to load resources in RAM if there's not enough VRAM left? [DxDiag.rar](https://archive.blender.org/developer/F5768539/DxDiag.rar) 63150511a29 also crashing this time, but render gets a bit farther.

@ostapblender, that sounds like a different issue, to be handled in a new report.

@ostapblender, that sounds like a different issue, to be handled in a new report.

The same scene which yesterday would crash is now rendering fine. :)

The same scene which yesterday would crash is now rendering fine. :)

Added subscriber: @JaySchay

Added subscriber: @JaySchay
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58183
No description provided.