Fix T58183: crash with CPU + GPU rendering after profiling changes.

Multi-device was not passing along profiler to the CPU.