intern/cycles/device/opencl/opencl_split.cpp
@@ -79,7 +79,7 @@ public:
 	OpenCLProgram program_data_init;
 	OpenCLProgram program_state_buffer_size;
 
-	OpenCLDeviceSplitKernel(DeviceInfo& info, Stats &stats, bool background_);
+	OpenCLDeviceSplitKernel(DeviceInfo& info, Stats &stats, Profiler &profiler, bool background_);
 
 	~OpenCLDeviceSplitKernel()
 	{
@@ -448,17 +448,17 @@ public:
 	}
 };
 
-OpenCLDeviceSplitKernel::OpenCLDeviceSplitKernel(DeviceInfo& info, Stats &stats, bool background_)
-: OpenCLDeviceBase(info, stats, background_)
+OpenCLDeviceSplitKernel::OpenCLDeviceSplitKernel(DeviceInfo& info, Stats &stats, Profiler &profiler, bool background_)
+: OpenCLDeviceBase(info, stats, profiler, background_)
 {
 	split_kernel = new OpenCLSplitKernel(this);
 
 	background = background_;
 }
 
-Device *opencl_create_split_device(DeviceInfo& info, Stats& stats, bool background)
+Device *opencl_create_split_device(DeviceInfo& info, Stats& stats, Profiler &profiler, bool background)
 {
-	return new OpenCLDeviceSplitKernel(info, stats, background);
+	return new OpenCLDeviceSplitKernel(info, stats, profiler, background);
 }
 
 CCL_NAMESPACE_END
