intern/cycles/render/stats.cpp
@@ -227,11 +227,9 @@ RenderStats::RenderStats() {
 	has_profiling = false;
 }
 
-void RenderStats::collect_profiling(Scene *scene, Stats *stats)
+void RenderStats::collect_profiling(Scene *scene, Profiler& prof)
 {
 	has_profiling = true;
-
-	Profiler &prof = stats->profiler;
 
 	kernel = NamedNestedSampleStats("Total render time", prof.get_event(PROFILING_UNKNOWN));
 
